test/files/neg/bug4533.check
bug4533.scala:6: error: erroneous or inaccessible type
  def statusByAlarms(alarms: GenSetLike[FooAlarm]) = println("hello")
                             ^
one error found
